--- a/_data/latest.yml
+++ b/_data/latest.yml
@@ -1,11 +1,7 @@
 ---
-title: DevRel Salon № 5
-when: Wednesday, 24 January, 18h30
-where: Delaville Café
-location: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1312.1709331106058!2d2.3479960583420554!3d48.87075909482214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e168e2b4c25%3A0xbd4bd1e361162230!2sDelaville+Caf%C3%A9!5e0!3m2!1sen!2sfr!4v1507643309518
-content: <p>So. Much. Turkey. Let's face the new year and start planning our developer
-  relations strategies, together. We'll gather and discuss what worked last year,
-  and what didn't, and how we can do better this year. Come with a description of
-  a challenge you faced, and how you faced it—whether you succeeded or failed, and
-  let's all learn from each others' experience.</p> <p>Please <a href="https://www.eventbrite.com/e/devrel-salon-no-5-tickets-41794684025">RSVP</a>.
-  We'll be there waiting for you.</p>
+title: DevRel Salon № 6
+when: Thursday, 22 February (tentative), 18h30
+where: TBD, Amsterdam
+location: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d77979.68277259714!2d4.828412371773606!3d52.35473214330766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c63fb5949a7755%3A0x6600fd4cb7c0af8d!2sAmsterdam%2C+Netherlands!5e0!3m2!1sen!2sfr!4v1517233155480
+content: <p>We're hitting the road, and taking the Salon to Amsterdam for the February edition of the Salon. Come meet fellow DevRel folks from the Netherlands, and find an answer to the eternal question—What department does DevRel belong under?</p>
+  <p>Please <a href="https://www.eventbrite.com/e/devrel-salon-no-6-tickets-42630280316">RSVP</a>. We'll be there waiting for you.</p>
