--- a/_data/latest.yml
+++ b/_data/latest.yml
@@ -1,7 +1,7 @@
 ---
 title: DevRel Salon № 6
 when: Thursday, 22 February (tentative), 18h30
-where: TBD, Amsterdam
-location: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d77979.68277259714!2d4.828412371773606!3d52.35473214330766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c63fb5949a7755%3A0x6600fd4cb7c0af8d!2sAmsterdam%2C+Netherlands!5e0!3m2!1sen!2sfr!4v1517233155480
+where: De Zotte, Raamstraat 29, 1016 XL Amsterdam, Netherlands
+location: https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9744.957831911273!2d4.8810324!3d52.3660779!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x13f99943354f0028!2sDe+Zotte!5e0!3m2!1sen!2sfr!4v1518168239904
 content: <p>We're hitting the road, and taking the Salon to Amsterdam for the February edition of the Salon. Come meet fellow DevRel folks from the Netherlands, and find an answer to the eternal question—What department does DevRel belong under?</p>
   <p>Please <a href="https://www.eventbrite.com/e/devrel-salon-no-6-tickets-42630280316">RSVP</a>. We'll be there waiting for you.</p>
