No, it is not tentative, it is fixed.

--- a/_data/latest.yml
+++ b/_data/latest.yml
@@ -1,6 +1,6 @@
 ---
 title: DevRel Salon № 6
-when: Thursday, 22 February (tentative), 18h30
+when: Thursday, 22 February, 18h30
 where: De Zotte, Raamstraat 29, 1016 XL Amsterdam, Netherlands
 location: https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9744.957831911273!2d4.8810324!3d52.3660779!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x13f99943354f0028!2sDe+Zotte!5e0!3m2!1sen!2sfr!4v1518168239904
 content: <p>We're hitting the road, and taking the Salon to Amsterdam for the February edition of the Salon. Come meet fellow DevRel folks from the Netherlands, and find an answer to the eternal question—What department does DevRel belong under?</p>
