--- a/_data/latest.yml
+++ b/_data/latest.yml
@@ -1,7 +1,7 @@
 ---
-title: DevRel Salon № 6
-when: Thursday, 22 February, 18h30
-where: De Zotte, Raamstraat 29, 1016 XL Amsterdam, Netherlands
-location: https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9744.957831911273!2d4.8810324!3d52.3660779!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x13f99943354f0028!2sDe+Zotte!5e0!3m2!1sen!2sfr!4v1518168239904
-content: <p>We're hitting the road, and taking the Salon to Amsterdam for the February edition of the Salon. Come meet fellow DevRel folks from the Netherlands, and find an answer to the eternal question—What department does DevRel belong under?</p>
-  <p>Please <a href="https://www.eventbrite.com/e/devrel-salon-no-6-tickets-42630280316">RSVP</a>. We'll be there waiting for you.</p>
+title: DevRel Salon № 7
+when: Thursday, 5 April, 18h30
+where: TBD (watch this space!)
+location: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d83998.75787025354!2d2.2768490692851464!3d48.858950576308345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e1f06e2b70f%3A0x40b82c3688c9460!2sParis!5e0!3m2!1sen!2sfr!4v1521802287796
+content: <p>This month, we return to Paris, and we're looking for a quieter, more intimate space for the next Salon, so we can talk—and be heard. This month's proposed topic? The CFP is open for DevXCon and DevRelCon! Let's help each other craft the perfect proposal—bring your topic, and pitch it to the group. Don't have a good idea for a talk, or aren't sure? Let us help you find your muse!</p>
+  <p>Please <a href="https://www.eventbrite.com/e/devrel-salon-no-7-tickets-44476559587">RSVP</a>. We'll be there waiting for you.</p>
