--- a/_data/latest.yml
+++ b/_data/latest.yml
@@ -1,9 +1,10 @@
 ---
-title: DevRel Salon № 7
-when: Thursday, 5 April, 18h30
-where: TBD (watch this space!)
-location: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20995.235289497297!2d2.3147125406739044!3d48.869566646746364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fae66a44b9d%3A0x10a6bf09b35b0636!2sLe+Bloc!5e0!3m2!1sen!2sfr!4v1522337280746
-content: <p>This month, we return to Paris, and we've found a quieter, more intimate space for the next Salon at Le Bloc, so we can talk—and be heard. Spots are limited, so be sure to <a href="https://www.eventbrite.com/e/devrel-salon-no-7-tickets-44476559587">RSVP</a>!</p> <p>This month's proposed topic? The CFP is open for DevXCon and DevRelCon! Let's help each other craft the perfect proposal—bring your topic, and pitch it to the group. Don't have a good idea for a talk, or aren't sure? Let us help you find your muse!</p>
-  <p>Please <a href="https://www.eventbrite.com/e/devrel-salon-no-7-tickets-44476559587">RSVP</a>. We'll be there waiting for you.</p>
+title: DevRel Salon № 8
+when: Wednesday, 30 May, 18h30
+where: Paris…TBD!
+location: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d83998.7576953243!2d2.277020594315912!3d48.85895068054826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e1f06e2b70f%3A0x40b82c3688c9460!2sParis!5e0!3m2!1sen!2sfr!4v1526560649332
+real-location: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1595.7552403151738!2d2.3369864215889327!3d48.864916024282905!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e25aa74bce5%3A0x26b66d8ea44cf7b3!2sJardin+du+Palais+Royal!5e0!3m2!1sen!2sfr!4v1526551750718
+content: <p>Join us for Printemps et Pétanque à Paris. Enjoy some quiet outdoor space, social time with colleagues, and of course shop talk and networking. Spots are limited, so be sure to <a href="https://www.meetup.com/Paris-DevRel-Salon/events/250873651/">RSVP</a>!</p>
+  <p>Please <a href="https://www.meetup.com/Paris-DevRel-Salon/events/250873651/">RSVP</a>. We'll be there waiting for you.</p>
 
 
