--- a/_data/latest.yml
+++ b/_data/latest.yml
@@ -1,10 +1,9 @@
 ---
 title: DevRel Salon № 8
 when: Wednesday, 30 May, 18h30
-where: Paris…TBD!
-location: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d83998.7576953243!2d2.277020594315912!3d48.85895068054826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e1f06e2b70f%3A0x40b82c3688c9460!2sParis!5e0!3m2!1sen!2sfr!4v1526560649332
-real-location: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1595.7552403151738!2d2.3369864215889327!3d48.864916024282905!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e25aa74bce5%3A0x26b66d8ea44cf7b3!2sJardin+du+Palais+Royal!5e0!3m2!1sen!2sfr!4v1526551750718
-content: <p>Join us for Printemps et Pétanque à Paris. Enjoy some quiet outdoor space, social time with colleagues, and of course shop talk and networking. Spots are limited, so be sure to <a href="https://www.meetup.com/Paris-DevRel-Salon/events/250873651/">RSVP</a>!</p>
+where: Chez Josephine, 6 place du marché Sainte-Catherine
+location: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1312.5759443217125!2d2.3618636856639315!3d48.85531397307435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e671fe240767d7%3A0x1d910c034bd1b629!2s6+Place+du+March%C3%A9+Sainte-Catherine%2C+75004+Paris-4E-Arrondissement!5e0!3m2!1sen!2sfr!4v1527239348533
+content: <p>Join us for Printemps et Peut Être Pétanque à Paris. Enjoy some quiet terrace space in the sweet weather of Paris's spring, social time with colleagues, and maybe we'll even throw heavy objects competitively. Of course there will be plenty of shop talk and networking with cool members of the DevRel community. Spots are limited, so be sure to <a href="https://www.meetup.com/Paris-DevRel-Salon/events/250873651/">RSVP</a>!</p>
   <p>Please <a href="https://www.meetup.com/Paris-DevRel-Salon/events/250873651/">RSVP</a>. We'll be there waiting for you.</p>
 
 
