--- a/_data/latest.yml
+++ b/_data/latest.yml
@@ -1,6 +1,6 @@
 ---
-title: "DevRel Salon № 11"
-when: "Tuesday, 12 February, 2019"
-where: "SFEIR, 48 Rue Jacques Dulud, 92200, Neuilly-sur-Seine"
-location: "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2623.800835270801!2d2.2657500690290884!3d48.88107319033386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47954ccc5712a75d%3A0x7c2e3534259d0a5c!2sSFEIR!5e0!3m2!1sen!2sfr!4v1548072013228"
-content: "<p>Our February 2019 edition of the Paris DevRel salon will be in our \"formal\" format - some presentations with an open round-table to follow.<br /><br />Our topic: Events; Participating, Sponsoring, and Organising<br /><br />Our host: <a href=\"https://www.sfeir.com/\">SFEIR</a>, located just outside of Paris in Neuilly-sur-Seine<br /><br />If you're planning to come, please <a href=\"https://www.meetup.com/Paris-DevRel-Salon/events/256470876/\">RSVP</a> as it helps us to plan ahead!<br /><br />Finally, save the date for Salon № 12: 4 March 2019.</p>"
+title: "DevRel Salon № 12"
+when: "Tuesday, 12 March 2019"
+where: "The Green Goose, 19 rue des Boulets, 75011 Paris"
+location: "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2625.4107437969233!2d2.3883902156741175!3d48.85037747928675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e672749e5a6fc7%3A0x39f5b79db5574420!2sThe+Green+Goose!5e0!3m2!1sen!2sfr!4v1550667129519"
+content: "<p>The March 2019 Paris edition will be in our \"informal\" format. No slides, no microphones–just us, some drinks, and some fun discussion.<br><br>Our location: <a href=\"http://www.thegreengoose.fr/\">The Green Goose</a>, located in the 11th near Place de la Nation.<br><br>If you're planning to come, please <a href=\"https://www.meetup.com/Paris-DevRel-Salon/events/256470977/\">RSVP</a> so we can get a big enough table. 🙂<br><br>Also, save the date for Salon № 12 on 16 April!</p>"
